# acestep.cpp

./: .gitignore  .gitmodules  CMakeLists.txt  cantor_engine.map  implementation_notes.md
.github/workflows/: engine-release.yml
docs/: ABI.md  BUILD-ANDROID.md  BUILD-VULKAN.md
include/: cantor_engine.h
relay/public/backends/: v1.json
src/: abi.cpp  backend.h  cond-enc.h  dit-sampler.h  dit.h  error.h  fsq-detok.h  fsq-tok.h  gguf-weights.h  model-store.cpp  model-store.h  pipeline-lm.cpp  pipeline-lm.h  pipeline-synth-impl.h  pipeline-synth-ops.cpp  pipeline-synth.cpp  pipeline-synth.h  pipeline-understand.cpp  qwen3-enc.h  qwen3-lm.h  vae-enc.h  vae.h  weight-ctx.h
tests/: CMakeLists.txt  test-abi.c  test-backend-guard.c  test-dit-resume.cpp  test-model-store.cpp
tools/: ace-server.cpp  ace-synth.cpp  check-no-fatal.sh  neural-codec.cpp  synth-batch-runner.h
